fixed weird issue with dark mode fully functioning now

--- a/Styles/Common.css
+++ b/Styles/Common.css
@@ -15,6 +15,7 @@ body {
     border-radius: 30px;
     position: sticky;
     display: none;
+    z-index: 5;
 }
 
 .Popup button {
